--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.SIGNIN_REPO_SECRET }}
           publish_dir: ./ # Change this if you have a specific directory for your static files
           publish_branch: gh-pages # This is the branch where your site will be deployed
